rust/macros/tests/ui/fail/missing_route_attr.stderr
error: expected #[route(...)] attribute
  --> tests/ui/fail/missing_route_attr.rs:12:14
   |
12 | struct Alice(Channel);
   |              ^^^^^^^
